Fix wrong assertion, the negatiopn of "a && b" is "!a || !b" so we need "DIP(ip, blocks) != 0" here.

Should fix PR kern/56725 (Panic when ls directory with device nodes
on an older ffs)